Solucionados varios bugs de Admin (más info en el Pull Request)

--- a/src/main/resources/templates/common/navbar.peb.html
+++ b/src/main/resources/templates/common/navbar.peb.html
@@ -5,7 +5,7 @@
             <div class="d-flex align-items-center gap-2 gap-md-3">
 
                 <!-- 1. LOGO -->
-                <a class="text-decoration-none d-flex align-items-center text-white me-1" href="#">
+                <a class="text-decoration-none d-flex align-items-center text-white me-1" href="/">
                     <img src="/Dawazon.png"
                         class="bg-white text-dark rounded-circle d-flex justify-content-center align-items-center me-2"
                         style="width: 35px; height: 35px; font-weight: bold;">
@@ -79,10 +79,10 @@
             </nav>
         </div>
         {% endif %}
-        {% if isManager %}
+         {% if isManager %}
         <div class="bg-custom-secondary text-white py-1 shadow-sm">
             <nav class="d-flex gap-3 overflow-auto ms-6" style="white-space: nowrap; scrollbar-width: none;">
-                <a class="nav-link text-white small" href="/auth/me/productos">Mis productos:</a>
+                <a class="nav-link text-white small" href="/auth/me/products">Mis productos:</a>
                 <a class="nav-link text-white small" href="/auth/me/ventas">Ventas y envios:</a>
             </nav>
         </div>
